# LinxCoreModel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  regression.yml
.github/workflows/: ci.yml
crates/camodel/: Cargo.toml
crates/camodel/src/: lib.rs  tests.rs
crates/camodel/src/backend/: mod.rs
crates/camodel/src/backend/execute/: e1.rs  e2.rs  e3.rs  e4.rs  mod.rs  w1.rs  w2.rs
crates/camodel/src/backend/lsu/: l1d.rs  lhq.rs  liq.rs  mdb.rs  mod.rs  scb.rs  stq.rs
crates/camodel/src/control/: mod.rs
crates/camodel/src/control/commit/: cmt.rs  mod.rs  rob.rs
crates/camodel/src/control/recovery/: bru.rs  dynamic_target.rs  fls.rs  mod.rs
crates/camodel/src/core/: config.rs  engine.rs  mod.rs  model.rs  uop.rs
crates/camodel/src/decode/: builder.rs  classify.rs  mod.rs
crates/camodel/src/frontend/: mod.rs
crates/camodel/src/frontend/decode/: d1.rs  d2.rs  d3.rs  mod.rs
crates/camodel/src/frontend/dispatch/: checkpoints.rs  mod.rs  redirect.rs  s1.rs  s2.rs
crates/camodel/src/frontend/fetch/: f0.rs  f1.rs  f2.rs  f3.rs  f4.rs  ib.rs  mod.rs
crates/camodel/src/issue/: mod.rs
crates/camodel/src/issue/queues/: iq.rs  mod.rs  qtag.rs  ready_tables.rs
crates/camodel/src/issue/select/: i1.rs  i2.rs  mod.rs  p1.rs
crates/camodel/src/trace/: emit.rs  labels.rs  mod.rs
crates/cosim/: Cargo.toml
crates/dse/: Cargo.toml
crates/dse/src/: lib.rs
crates/elf/: Cargo.toml
crates/funcmodel/: Cargo.toml
crates/funcmodel/src/: lib.rs
crates/funcmodel/src/core/: mod.rs
crates/funcmodel/src/exec/: mod.rs
crates/funcmodel/src/memory/: mod.rs
crates/funcmodel/src/syscalls/: mod.rs
crates/funcmodel/src/trace/: mod.rs
crates/isa/: Cargo.toml
crates/lx-tools/: Cargo.toml
crates/lx-tools/src/cli/: mod.rs
crates/runtime/: Cargo.toml
crates/trace/: Cargo.toml
docs/project/: layout.md
docs/verification/: crosscheck-gates.md
tests/fixtures/: bootstrap_runtime.toml  bootstrap_sweep.toml  (+22 more)
(+14 files in other folders)
