[package]
name = "dse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
camodel = { path = "../camodel" }
elf = { path = "../elf" }
funcmodel = { path = "../funcmodel" }
isa = { path = "../isa" }
runtime = { path = "../runtime" }
