[package]
name = "funcmodel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
libc.workspace = true
serde.workspace = true
elf = { path = "../elf" }
isa = { path = "../isa" }
runtime = { path = "../runtime" }

[dev-dependencies]
tempfile.workspace = true
